Sat Dec  8 21:33:10 2001  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-daemon/gnome-settings-daemon.c (main): Import
	from gconf-xsettings module.  Cleaned up a bunch, and made to work
	with mouse properties too.

	* schemas/peripherals.schemas: New location for schemas.  Need to
	write many more.

2001-12-09  Gediminas Paulauskas <menesis@delfi.lt>

	* *.c (main): retrieve translation in utf-8 codeset. Do not
	setlocale ().
	* some Makefile.am (INCLUDES): remove intl.
	(..._LDADD): remove INTLLIBS

2001-12-08  Havoc Pennington  <hp@pobox.com>

	* configure.in (COMMON_MODULES): add gnome-desktop-2.0 to CFLAGS,
	add AC_PROG_INTLTOOL

2001-12-08  Richard Hestilow  <hestilow@ximian.com>

	* capplets/Makefile.am: Remove bonobo subdirs so people
	stop yelling at us.

2001-12-08  Richard Hestilow  <hestilow@ximian.com>

	* configure.in: Add special gconf defines (gconftool, etc).
	
2001-12-01  Richard Hestilow  <hestilow@ximian.com>

	* configure.in: Add libsounds stuff.
	* Makefile.am (SUBDIRS): Add libsounds.

Fri Nov 30 15:35:39 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Added AM_GLIB_GNU_GETTEXT and
	setting of GETTEXT_PACKAGE.

	* Makefile.am: Change from xml-i18n-extract (etc.)
	to intltool-extract (etc.)

2001-11-29  Miles Lane <miles@megapathdsl.net>

	* configure.in: Removed intl/Makefile from AC_OUTPUT
	since there is no intl subdirectory in the repository.

2001-11-29  Bradford Hovinen  <hovinen@ximian.com>

	* configure.in: Disabled archiver

	* Makefile.am (SUBDIRS): Disabled archiver

2001-11-28  Richard Hestilow  <hestilow@ximian.com>

	* configure.in: Remove gtkhtml-2.0 check since we no longer
	depend on it.

2001-10-27  Bradford Hovinen  <hovinen@ximian.com>

	* configure.in: Bump version to 1.99.0

2001-10-26  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Remove intl from SUBDIRS

	* */Makefile.am: s/XML_I18N_MERGE/INTLTOOL/g

	* capplets/Makefile.am: Remove screensaver from