@@ -86,20 +86,13 @@ dnl ==============================================
 dnl Special GConf section 
 dnl ==============================================
 
-dnl Specify the gconf configuration source, 
-dnl default to xml::$(sysconfdir)/gconf/gconf.xml.defaults
+AC_PATH_PROG(GCONFTOOL, gconftool-2, no)
 
-GCONF_CONFIG_SOURCE=
-AC_ARG_ENABLE(gconf-source, [  --enable-gconf-source=sourceaddress      Where to install schema files.],GCONF_CONFIG_SOURCE=$enable_gconf_source,)
-
-if test "x$GCONF_CONFIG_SOURCE" = "x"; then
-        GCONF_CONFIG_SOURCE="xml::\${sysconfdir}/gconf/gconf.xml.defaults"
+if test x"$GCONFTOOL" = xno; then
+  AC_MSG_ERROR([gconftool-2 executable not found in your path - should be installed with GConf])
 fi
 
-AC_SUBST(GCONF_CONFIG_SOURCE)
-AC_SUBST(INSTALL_GCONF_CONFIG_SOURCE)
-
-
+AM_GCONF_SOURCE_2
 
 dnl ==============================================
 dnl Define the main variables
