@@ -1,3 +1,7 @@
+Sun Dec  9 19:24:47 2001  Jonathan Blandford  <jrb@redhat.com>
+
+	* configure.in: use gconf macros.
+
 Sat Dec  8 21:33:10 2001  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-settings-daemon/gnome-settings-daemon.c (main): Import
